--- a/pojiloy/pojiloy/player2.xaml
+++ b/pojiloy/pojiloy/player2.xaml
@@ -1,14 +1,10 @@
-﻿<Window x:Class="pojiloy.MainWindow"
+﻿<Window x:Class="pojiloy.player2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:pojiloy"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="139,133,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-
-    </Grid>
-    
+        Title="player2" Height="556.276" Width="809.527">
+    <UniformGrid Name="ugr" Margin="0,10,2,-2"/>
 </Window>
