--- a/pojiloy/pojiloy/MainWindow.xaml
+++ b/pojiloy/pojiloy/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:pojiloy"
         mc:Ignorable="d"
-        Title="ADMINKA SERVERA MUNICRAFT 1.2.5 8 800 555 35 35 CHLEN" Height="567.913" Width="1049.261" Closing="Window_Closing">
+        Title="ADMINKA SERVERA MUNICRAFT 1.2.5 8 800 555 35 35 CHLEN" Height="567.913" Width="1049.261" Closing="Window_Closing" Closed="Window_Closed">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="Black" Offset="0"/>
